--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ addons:
 
 env:
   global:
-    - PACKAGE_VCS_URL=https://gitlab.com/aursu/rpmbuild-dwarves.git
     - BINTRAY_REPO=custom
+    - ARTIFACTORY_URL=https://rpmb.jfrog.io
+    - OS7=7.9.2009
+    - OS7TAG=7.9.2009
 
 jobs:
   include:
@@ -25,7 +27,7 @@ jobs:
       deploy:
         provider: script
         script:
-          - docker-compose -f rpmbuild/docker-compose.bintray.yml run --rm -e BINTRAY_USER=$BINTRAY_USER -e BINTRAY_API_KEY=$BINTRAY_API_KEY -e BINTRAY_REPO=$BINTRAY_REPO -e PACKAGE_VCS_URL=$PACKAGE_VCS_URL ${UPLOADER}
+          - docker-compose -f rpmbuild/docker-compose.bintray.yml run --rm -e BINTRAY_USER=$BINTRAY_USER -e BINTRAY_API_KEY=$BINTRAY_API_KEY -e BINTRAY_REPO=$BINTRAY_REPO -e ARTIFACTORY_URL=$ARTIFACTORY_URL ${UPLOADER}
         on:
           all_branches: true
       env: BUILD=centos7build UPLOADER=centos7bintray
